# PythonTemplate

./: README.md  build.sh  pyproject.toml
.github/workflows/: build.yml  publish.yml
src/pythontemplate/: __init__.py  main.py
tests/: __init__.py  test_main.py
