[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pythontemplate"
version = "0.0.1"
description = "Template repository to be used a base for Python projects"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [{name = "Charles Andrews", email = "cfandrews@outlook.com"}]